--- a/package.json
+++ b/package.json
@@ -9,12 +9,29 @@
     "sqlite3": "^4.0.1"
   },
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "start": "nodemon  --exec babel-node ./src/server.js",
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest --runInBand",
+    "watch": "jest --runInBand --watch",
+    "lint:fix": "eslint --fix src/**"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.3.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^24.1.0",
     "concurrently": "4.1.0",
-    "nodemon": "1.19.1"
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.2.2",
+    "jest-environment-node": "^23.4.0",
+    "jest-junit": "^5.2.0",
+    "nodemon": "1.19.1",
+    "prettier": "^2.1.1"
   },
   "engines": {
     "node": ">=10.16.3"
